# notesalad

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yaml
doc/: opl-params.md  opm-params.md  sd1-params.md
libnotesalad/: CMakeLists.txt  CallbackOPLDevice.cpp  CallbackOPLDevice.h  CallbackOPMDevice.cpp  CallbackOPMDevice.h  CallbackSD1Device.cpp  CallbackSD1Device.h  EmulatorBase.cpp  EmulatorBase.h  IMIDIManager.cpp  IMIDIManager.h  OPL2MIDIManager.cpp  OPL2MIDIManager.h  OPL3MIDIManager.cpp  OPL3MIDIManager.h  OPLEmulator.cpp  OPLEmulator.h  OPMEmulator.cpp  OPMEmulator.h  OPMMIDIManager.cpp  OPMMIDIManager.h  SD1MIDIManager.cpp  SD1MIDIManager.h  midi.cpp  midi.h  opl.cpp  opl.h  oplsd1.cpp  oplsd1.h  opm.cpp  opm.h  sd1.cpp  sd1.h
libnotesalad/resampler/: CMakeLists.txt  arch.h
libnotesaladcore/: library.properties
libnotesaladcore/src/: 7BitEncoding.cpp  7BitEncoding.h  BufferIO.cpp  BufferIO.h  CMakeLists.txt  Utils.cpp  Utils.h  notesaladcore.h
libnotesaladcore/src/MIDI/: BasicVoiceAllocator.h  CMakeLists.txt  GlobalParams.h  IMIDIDriver.h  INoteManager.h  IToneGenerator.h  IVoiceAllocator.h  LFO.cpp  LFO.h  MIDICommon.h  MIDIDriver.h  MIDIParser.cpp  MIDIParser.h  MonoNoteManager.cpp  MonoNoteManager.h  ParamIDs.h  ParamInfo.g.cpp  ParamInfo.h  Patch.h  PatchManagerBase.h  PatchParams.cpp  PatchParams.h  PatchSerialization.h  PolyNoteManager.h  RAMPatchManager.h  SysEx.cpp  SysEx.h  TimeSource.h  ToneController.h  VoiceStatus.cpp  VoiceStatus.h
libnotesaladcore/src/MIDI/OPL/: CMakeLists.txt  DefaultOPLPatchManager.cpp  DefaultOPLPatchManager.h  OPL2MIDISystem.cpp  OPL2MIDISystem.h  OPL2VoiceAllocator.cpp  OPL2VoiceAllocator.h  OPL3MIDISystem.cpp  OPL3MIDISystem.h  OPL3VoiceAllocator.cpp  OPL3VoiceAllocator.h  OPLGMPatchData.cpp  OPLGMPatchData.h  OPLParamInfo.g.cpp  OPLParamInfo.h  OPLToneGenerator.cpp  OPLToneGenerator.h
libnotesaladcore/src/MIDI/OPM/: CMakeLists.txt  OPMMIDISystem.cpp  OPMMIDISystem.h  OPMParamInfo.g.cpp  OPMParamInfo.h  OPMToneGenerator.cpp  OPMToneGenerator.h
libnotesaladcore/src/MIDI/SD1/: CMakeLists.txt  DefaultSD1PatchManager.cpp  DefaultSD1PatchManager.h  OPLSD1MIDISystem.cpp  OPLSD1MIDISystem.h  OPLSD1ToneGenerator.cpp  OPLSD1ToneGenerator.h  SD1MIDISystem.cpp  SD1MIDISystem.h  SD1ParamInfo.g.cpp  SD1ParamInfo.h  SD1Patches.cpp  SD1Patches.h  SD1ToneGenerator.cpp  SD1ToneGenerator.h
libnotesaladcore/src/OPL/: BufferedOPLDevice.cpp  BufferedOPLDevice.h  CMakeLists.txt  OPLDeviceBase.cpp  OPLDeviceBase.h  OPLReadWriteDeviceBase.cpp  OPLReadWriteDeviceBase.h  OPLRegisterSet.cpp  OPLRegisterSet.h  OPLTone.cpp  OPLTone.h  OPLUtils.cpp  OPLUtils.h
libnotesaladcore/src/OPM/: BufferedOPMDevice.cpp  BufferedOPMDevice.h  CMakeLists.txt  OPMDeviceBase.cpp  OPMDeviceBase.h  OPMRegisterSet.cpp  OPMRegisterSet.h  OPMTone.cpp  OPMTone.h  OPMUtils.cpp  OPMUtils.h
libnotesaladcore/src/SD1/: CMakeLists.txt  SD1DeviceBase.cpp  SD1DeviceBase.h  SD1OPLAdaptor.cpp  SD1OPLAdaptor.h  SD1Tone.cpp  SD1Tone.h  SD1Utils.h
libnotesaladcore/test/: 7BitEncoding.cpp  CMakeLists.txt
libnotesaladcore/test/MIDI/: IMIDIDriver_test.h  IToneGenerator_test.h  MIDIDriver.cpp  MIDIParser.cpp  ParamInfo.h  PatchSerialization.cpp  TestTone.cpp  TestTone.h
libnotesaladcore/test/MIDI/OPL/: OPLParamInfo.cpp
libnotesaladcore/test/MIDI/OPM/: OPMParamInfo.cpp
libnotesaladcore/test/MIDI/SD1/: SD1ParamInfo.cpp
libnotesaladcore/test/OPL/: OPLReadWriteDeviceBase.cpp
libnotesaladcore/test/SD1/: SD1Utils.cpp
python/: .gitignore  .pylintrc  pyproject.toml  setup.py
python/notesalad/: __init__.py  opl.py  opm.py  patch.py  sd1.py
python/notesalad/resources/: __init__.py  opm.json  universal.json
resources/params/: opl.json  sd1.json  universal.json
scripts/: generate_all.sh
scripts/codegen/: gen_param_info_cpp.py
scripts/doc/: gen_params_md.py
scripts/params/: gen_opl.py  gen_opm.py  gen_sd1.py  gen_universal.py
web/: .gitignore  .npmrc  package-lock.json  package.json  worklet.webpack.config.js
web/src/: index.js
web/src/Worklet/: NoteSaladLibrary.js  index.js
web/src/Worklet/Emulators/: EmulatorBase.js  OPLEmulator.js  OPMEmulator.js
web/src/Worklet/MIDI/: MIDIDriverBase.js  OPL3MIDIDriver.js  OPMMIDIDriver.js
web/src/Worklet/Processors/: OPLProcessor.js  OPMProcessor.js  OPXProcessorBase.js
